lints index.html

--- a/example/multi-user-3d-web-experience/client/public/index.html
+++ b/example/multi-user-3d-web-experience/client/public/index.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg" href="/web-client/favicon.svg" />
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>MML 3D Web Experience</title>
+    <meta
+      name="viewport"
+      content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <title>mml.mgz.me</title>
     <script>
       window.SESSION_TOKEN = "SESSION.TOKEN.PLACEHOLDER";
     </script>
