fixes typo on tic-tac-toe example

--- a/example/multi-user-3d-web-experience/server/mml-documents/tic-tac-toe.html
+++ b/example/multi-user-3d-web-experience/server/mml-documents/tic-tac-toe.html
@@ -212,7 +212,7 @@
     }
   }
 
-  function handleBlockClick(blockId, evet) {
+  function handleBlockClick(blockId, event) {
     const playerId = event.detail.connectionId;
     const block = blocks.get(blockId);
     if (block.isAnimating === false) {
