adds about-me MML document

--- a/example/multi-user-3d-web-experience/server/mml-documents/playground.html
+++ b/example/multi-user-3d-web-experience/server/mml-documents/playground.html
@@ -186,6 +186,14 @@
         mFrame.setAttribute("z", z);
         mFrame.setAttribute("ry", ry);
         altarsGroup.appendChild(mFrame);
+      } else if (i === 11) {
+        const mFrame = document.createElement("m-frame");
+        mFrame.setAttribute("src", "wss:///mml-documents/about-me.html");
+        mFrame.setAttribute("x", x);
+        mFrame.setAttribute("y", 1.12);
+        mFrame.setAttribute("z", z);
+        mFrame.setAttribute("ry", ry);
+        altarsGroup.appendChild(mFrame);
       }
     }
   }
