updates intro MML document

--- a/example/multi-user-3d-web-experience/server/mml-documents/intro.html
+++ b/example/multi-user-3d-web-experience/server/mml-documents/intro.html
@@ -1,4 +1,4 @@
-<m-group id="wrapper" ry="-90">
+<m-group id="wrapper">
   <m-group id="speaker"></m-group>
   <m-group id="flat-screen" y="4" z="-4">
     <m-cube color="#ffffff" width="10.2" height="6.2" depth="0.03" z="-0.02"></m-cube>
@@ -143,7 +143,6 @@
   attractImage.setAttribute("src", "/assets/playground/start_here.png");
   attractImage.setAttribute("width", 5);
   attractImage.setAttribute("y", attractY);
-  attractImage.setAttribute("ry", -90);
   attractImage.setAttribute("emissive", 5);
   attractImage.setAttribute("sx", 1);
   attractImage.setAttribute("sy", 1);
