--- a/example/multi-user-3d-web-experience/server/mml-documents/gaming-station.html
+++ b/example/multi-user-3d-web-experience/server/mml-documents/gaming-station.html
@@ -2,7 +2,7 @@
   <m-group id="tv-group" z="-2.1">
     <m-model src="/assets/playground/crt_tv.glb"></m-model>
     <m-group id="controls"></m-group>
-    <m-group id="code-display" ry="-25" x="6.1" y="1.8" z="3.25">
+    <m-group id="code-display" ry="-25" x="6.75" y="1.8" z="3.25">
       <m-image id="code-image" width="5" emissive="6" collide="false" sx="0" sy="0"></m-image>
     </m-group>
   </m-group>
@@ -54,39 +54,37 @@
   const video = createVideo(tvGroup, firstVideo, 0, 2.92, 1.35, 4.5, 3.95, 1.5);
   const audio = createAudio(wrapper, firstAudio, 0, 21, 0, 90, 45, 100, false);
 
-  class AttributesToSVG {
-    svgOpening = `<svg xmlns="http://www.w3.org/2000/svg"`;
-    fontFamily = `font-family="monospace"`;
-    lineHeight = 0;
+  class AttributesToCanvasImage {
+    image = null;
+    canvas = document.createElement("canvas");
+    ctx = this.canvas.getContext("2d");
 
-    fontSize = 0;
-    fontSizeAttr = "";
-    color = "";
-    strokeWidth = "";
-    sharedTextAttrs = "";
-    defaultColorAttrs = "";
+    width = 300;
+    height = 300;
+    lineHeight = 0;
+    maxLineCharacters = 0;
+    fonstSize = 50;
 
     openingTag = "";
     closingTag = "";
 
+    color = "#ffffff";
     attributeColor = "#ff77aa";
     eqColor = "#777777";
     valueColor = "#33aaff";
 
-    constructor(fontSize, color, openingTag, closingTag) {
-      this.fontSize = fontSize;
-      this.fontSizeAttr = `font-size="${fontSize}px"`;
-      this.lineHeight = parseFloat((fontSize * 1.1).toFixed(2));
-      this.color = `fill="${color}" stroke="${color}"`;
-      this.strokeWidth = `stroke-width="${Math.round(fontSize * 0.05)}px"`;
-      this.sharedTextAttrs = `${this.fontFamily} ${this.fontSizeAttr} ${this.strokeWidth}`;
-      this.defaultColorAttrs = `${this.color}`;
-      this.openingTag = this.escapeForSVG(openingTag);
-      this.closingTag = this.escapeForSVG(closingTag);
-    }
+    attributes = [];
 
-    escapeForSVG(text) {
-      return text.replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;");
+    constructor(targetImage, element, fontSize, color, tag) {
+      this.image = targetImage;
+      this.fontSize = fontSize;
+      this.lineHeight = parseFloat((this.fontSize * 1.05).toFixed(2));
+      this.color = color;
+
+      this.openingTag = `<${tag}`;
+      this.closingTag = `></${tag}>`;
+
+      this.getElementAttributes(element);
     }
 
     getElementAttributes(element) {
@@ -95,61 +93,55 @@
         let val = element.getAttribute(attr);
         const numberVal = parseFloat(val);
         if (!isNaN(numberVal)) val = numberVal.toFixed(2);
-        attributes.push(`${attr}="${val}"`);
+        const attribute = `${attr}="${val}"`;
+        attributes.push(attribute);
+        const attributeLength = attribute.length;
+        if (this.maxLineCharacters < attributeLength) {
+          this.maxLineCharacters = attributeLength;
+        }
       }
-      return attributes;
+      this.attributes = attributes;
+      this.canvas.width = (this.maxLineCharacters + 4) * this.fonstSize * 0.3;
+      this.canvas.height = this.fontSize * (this.attributes.length + 2) * 1.25;
+      const imageWidth = Math.round(this.canvas.width * 100) / 10000;
+      const imageHeight = Math.round(this.canvas.height * 100) / 10000;
+      this.image.setAttribute("width", imageWidth);
+      this.image.setAttribute("height", imageHeight);
+      this.image.setAttribute("emissive", 12);
+      this.ctx.fillStyle = "rgba(0, 0, 0, 0)";
+      this.ctx.fillRect(0, 0, this.canvas.width, this.canvas.height);
+      this.paintCanvas();
     }
 
-    getTextTag(content, yPosition, collorAttributes) {
-      let tag = `<text x="10" y="${yPosition}" ${this.sharedTextAttrs} ${collorAttributes}>`;
-      tag = `${tag} ${content} </text>`;
-      return tag;
-    }
-
-    getHighlightedTextTag(content, yPosition) {
-      let [attr, value] = content.split("=");
-      value = value.replace("/assets/playground", "https://mgz.me");
-
-      const attrColor = `fill="${this.attributeColor}" stroke="${this.attributeColor}"`;
-      const eqColor = `fill="${this.eqColor}" stroke="${this.eqColor}"`;
-      const valueColor = `fill="${this.valueColor}" stroke="${this.valueColor}"`;
-
-      let xOffset = this.fontSize;
-      let tag = `<text x="${xOffset}" y="${yPosition}" ${this.sharedTextAttrs} ${attrColor}>${attr}</text>`;
-      xOffset += attr.length * this.fontSize * 0.65;
-      tag += `<text x="${xOffset}" y="${yPosition}" ${this.sharedTextAttrs} ${eqColor}>=</text>`;
-      xOffset += this.fontSize * 0.65;
-      tag += `<text x="${xOffset}" y="${yPosition}" ${this.sharedTextAttrs} ${valueColor}>${value}</text>`;
-      return tag;
-    }
-
-    createAttributesSVG(imageElement, element) {
-      const attrs = this.getElementAttributes(element);
-      let maxTextWidth = 0;
-      let innerContent = "";
-      innerContent += this.getTextTag(this.openingTag, this.lineHeight, this.defaultColorAttrs);
-      attrs.forEach((attr, index) => {
-        const yPos = this.lineHeight * (index + 2);
-        innerContent += this.getHighlightedTextTag(attr, yPos);
-        const currentWidth = (attr.length + 4) * (this.fontSize * 0.6);
-        maxTextWidth = Math.max(maxTextWidth, currentWidth);
-      });
-      innerContent += this.getTextTag(
-        this.closingTag,
-        this.lineHeight * (attrs.length + 2),
-        this.defaultColorAttrs,
-      );
-      const svgWidth = maxTextWidth + 20;
-      const svgHeight = (attrs.length + 3) * this.lineHeight + 30;
-      const svgURI = encodeURIComponent(
-        `<svg xmlns="http://www.w3.org/2000/svg" width="${svgWidth}" height="${svgHeight}">${innerContent}</svg>`,
-      );
-      imageElement.setAttribute("src", `data:image/svg+xml,${svgURI}`);
+    paintCanvas() {
+      this.ctx.font = `900 ${this.fontSize}px monospace`;
+      let yPos = this.lineHeight;
+      this.ctx.fillStyle = this.color;
+      this.ctx.fillText(this.openingTag, 0, yPos);
+      yPos += this.lineHeight;
+      for (let i = 0; i < this.attributes.length; i++) {
+        let xOffset = this.fonstSize * 0.6;
+        let [attr, value] = this.attributes[i].split("=");
+        value = value.replace("/assets/playground", "https://mgz.me");
+        this.ctx.fillStyle = this.attributeColor;
+        this.ctx.fillText(attr, xOffset, yPos);
+        xOffset += this.fonstSize * (attr.length + 1) * 0.3;
+        this.ctx.fillStyle = this.eqColor;
+        this.ctx.fillText("=", xOffset, yPos);
+        xOffset += this.fonstSize * 2 * 0.3;
+        this.ctx.fillStyle = this.valueColor;
+        this.ctx.fillText(value, xOffset, yPos);
+        yPos += this.lineHeight;
+        xOffset = this.fonstSize;
+      }
+      this.ctx.fillStyle = this.color;
+      this.ctx.fillText(this.closingTag, 0, yPos);
+      const dataUrl = this.canvas.toDataURL("image/png");
+      this.image.setAttribute("src", dataUrl);
     }
   }
 
-  const attrToSVG = new AttributesToSVG(100, "#cccc44", "<m-video", "/></m-video>");
-  attrToSVG.createAttributesSVG(codeImage, video);
+  const attrCodeImage = new AttributesToCanvasImage(codeImage, video, 25, "#cccc33", "m-video");
 
   function loopAnim(element, attr, start, end, duration, pingPong, easing = undefined) {
     const anim = document.createElement("m-attr-anim");
@@ -174,7 +166,7 @@
     video.setAttribute("height", height);
     video.setAttribute("emissive", emissive);
     video.setAttribute("src", src);
-    video.setAttribute("volume", 6);
+    video.setAttribute("volume", unmutedAudioVolume);
     video.setAttribute("loop", true);
     parentElement.appendChild(video);
     return video;
@@ -399,7 +391,7 @@
       default:
         break;
     }
-    attrToSVG.createAttributesSVG(codeImage, video);
+    attrCodeImage.getElementAttributes(video);
   }
 
   function createControlButton(name, icon, radius, yPos, thickness, color, opacity) {
